--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 .perguntas{
     width: 100%;
-    height: 83vh;
+    height: 80vh;
     background-color: #B04599;
     opacity: 0.8;
 }
@@ -31,8 +31,9 @@
     justify-content: center;
 }
 .pergunt{
-    font-size: 1.5em;
+    font-size: 1.2em;
     max-width: 600px;
+    height: 120px;
     font-family: 'Poppins', sans-serif;
     width: 100%;
     font-weight: 600;
@@ -42,17 +43,30 @@
     
 }
 .questoesalt{
+    flex-direction: column;
     max-width: 600px;
     font-family: 'Poppins', sans-serif;
-    width: 80%;
+    width: 84%;
+    height: 69px;;
     border-radius: 10px;
-    font-size: 1.5em;
+    font-size: 1em;
     font-weight: bold;
     color: rgb(82, 1, 70);
     background-color:#7c68ff;
     margin: 10px;
     padding: 10px;
 
+}
+
+.container_perguntAlt{
+
+    width: 100%;
+    height: 50vh;
+    padding-top: 10px;
+    
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 span{
